--- a/openlegacy-ide/pom.xml
+++ b/openlegacy-ide/pom.xml
@@ -28,6 +28,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		therefore has to acces his modules by "../". Here are all the child modules. -->
 	<modules>
 		<module>../openlegacy-ide-eclipse</module>
+		<module>../openlegacy-ide-eclipse-feature</module>
+		<!-- <module>../openlegacy-ide-eclipse-updatesite</module> -->
 		<module>target-platform</module>
 	</modules>
 
